 - Added some extra information to the "meta game" command: Description and Interface. For
    example, CS:S would display "Counter-Strike: Source" and "ServerGameDLL004."
 - Fixed bug where Metamod:Source could load the wrong GameDLL and/or load more than one
    GameDLL. This issue occured in HL2 CTF, SourceForts, or any other mod that relied on
    files from another mod directory.
 - Fixed bug where returning false in Load() after adding a Metamod event listener or
    hooking a function could cause a crash instead of rejecting the plugin.
 - Fixed bug where trying to load Metamod:Source a second time as a SourceMM or Valve
    server plugin could cause a crash.

2006/06/14 1.2.3:
 - Added SourceHook API for manual recalls: RETURN_META_(VALUE_)MNEWPARAMS
 - Added support for ServerGameDLL005 (latest HL2DM update)

2006/05/25 1.2.2:
 - Added the ability to "alias" plugin names in metaplugins.ini.
 - Added "meta alias" command.
 - Added SourceHook API for manual callclasses.
 - Added support for the latest Source engine (ServerGameDLL005).
 - Added API for printing text in a client's console with ClientConPrintf. This does the
    same thing as IVEngineServer::ClientPrintf except that it allows string formatting.
 - Added client version of "meta" command in order to allow clients to view version 
    information and a list of loaded plugins.
 - Fixed a bug causing old mods on newer engines to fail loading.
 - Fixed issues with SourceHook's SH_CALL and reference parameters.
 - Fixed a bug where the mm_pluginsfile cvar was being ignored.
 - Fixed a memory leak when using ISmmAPI::InterfaceSearch.

2006/02/15 1.2.1:
 - Fixed bug where returning newparams in a post hook would cause infinite recursion.
 - Fixed bug where "meta load" could load the same plugin multiple times.
 - Fixed bug where unloading a plugin could crash internal hook states.
 - Fixed bug where unhooking a single hook would clear the hook chain.

2006/01/07 1.2: