@@ -4,6 +4,8 @@
  - Fixed bug where Metamod:Source could load the wrong GameDLL and/or load more than one
     GameDLL. This issue occured in HL2 CTF, SourceForts, or any other mod that relied on
     files from another mod directory.
+ - Fixed bug where ISmmAPI::MetaFactory would return the wrong interface when trying to
+    retrieve ISmmPluginManager.
  - Fixed bug where returning false in Load() after adding a Metamod event listener or
     hooking a function could cause a crash instead of rejecting the plugin.
  - Fixed bug where trying to load Metamod:Source a second time as a SourceMM or Valve
